--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
-/* heyyyy do you seeeee 
-kuvuiehrvenrv
-lkvnkjsbvler
-jkbctrcvhjmk
-*/
+/* body */
+body{
+    background-color: rgb(244, 146, 146);  
+}
