--- a/style.css
+++ b/style.css
@@ -2,3 +2,9 @@
 body{
     background-color: rgb(244, 146, 146);  
 }
+
+.container{
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+}
